fix bootstrap columns and contrainer overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ html, body {
 display: flex;
 flex-direction: column;
 height: 100vh;
+
 }
 
 /*======== Header ========*/
@@ -76,6 +77,7 @@ height: 100vh;
 .content{
     background: white;
     /* margin: 5% 10%; */
+    overflow: auto;
     margin: 5% auto;
     min-height: 65vh;
     max-width: 960px;
@@ -153,20 +155,28 @@ input[type=text], select, textarea {
   
     transform: translate(-50%, -50%);
 }
+
+.pitem {
+    margin: 4px;
+}
+
 .portfolio-item-1{
     width: 400px;
     height: 200px;
     background-image: url("http://lorempixel.com/400/200/");
+    
 }
 .portfolio-item-2{
     width: 400px;
     height: 200px;
     background-image: url("http://lorempixel.com/400/200/");
+   
 }
 .portfolio-item-3{
     width: 400px;
     height: 200px;
     background-image: url("http://lorempixel.com/400/200/");
+    
 }
 .portfolio-items h4{
  color: goldenrod;
